# mailx

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  PROJECT_DELIVERY_SUMMARY.md  README.md  SETUP.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-notification.js  vite.config.js  vitest.config.ts
.github/workflows/: build-windows.yml  notification-tests.yml  release-installers.yml  release-windows.yml  test-windows.yml
coverage/: clover.xml  coverage-final.json  index.html
docs/: DARK_MODE_UX_ENHANCEMENTS.md  THEME_DESIGN.md  notifications-frontend-integration.md  p8-3-completion-summary.txt  sprint3-windows-package-completion-report.md  windows-ci-cd.md  windows-distribution.md  windows-notification-final-report.md  windows-notification-integration-report.md  windows-notification-testing-guide.md  windows-quickstart.md
docs/plans/: 2025-03-13-design-system-setup-design.md  2025-03-13-design-system.md  2025-03-13-tauri-mail-client-layout-design.md  2026-03-17-event-driven-sync-design.md  2026-03-17-event-driven-sync-implementation.md  2026-03-19-interaction-optimization-design.md  2026-03-19-interaction-optimization.md  2026-03-21-i18n-strategic-design.md  2026-03-21-i18n-ux-implementation.md  2026-04-05-receive-sync-baseline-refactor-design.md  2026-04-05-receive-sync-baseline-refactor-implementation.md  2026-04-06-unified-imap-sync-refactor-design.md  2026-04-06-unified-imap-sync-refactor-implementation.md
scripts/: check-accessibility.js  check-contrast.js  prepare-windows-signing.ps1  sign-windows-build.ps1
src/: App.svelte  App.test.ts  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/msix/: wix.xml
src-tauri/src/: accounts.rs  commands.rs  credentials.rs  credentials_legacy.rs  credentials_platform.rs  database.rs  html_sanitize.rs  imap_client.rs  lib.rs  mail_provider.rs  main.rs  notification_manager.rs  notification_manager.rs.bak  provider_defaults.rs  smtp_client.rs  sync_manager.rs
src-tauri/src/credentials/: fallback.rs  mod.rs  platform.rs  windows.rs  windows_tests.rs
src-tauri/src/platform/: mod.rs  windows_notification.rs
src-tauri/src/windows/: crash_tracker.rs  diagnostics.rs  minidump.rs  mod.rs
src-tauri/test/: accounts_tests.rs  credentials_tests.rs  database_sync_state_tests.rs  html_sanitize_tests.rs  imap_client_tests.rs  mail_provider_tests.rs  notification_commands_tests.rs  notification_history_tests.rs  notification_manager_tests.new  notification_manager_tests.rs  notification_tests.rs  smtp_client_tests.rs  sync_manager_tests.rs  windows_credentials_tests.rs  windows_notification_tests.rs
src/lib/: types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
tests/: notificationBridge.test.ts  setup.ts
(+185 files in other folders)
