[package]
name = "mailx"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mailx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.11"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
thiserror = "2"
mail-parser = "0.9"
imap = { version = "0.9", default-features = false }
native-tls = "0.2"
futures = "0.3"
regex = "1"
html-escape = "0.2"
ammonia = "4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
once_cell = "1"
aes-gcm = "0.10"
dirs = "5"
cfg-if = "1"
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
